# iso-hull

./: Cargo.toml  README.md  points.json  release.sh
.github/workflows/: publish-crate.yml
benches/: examples.rs
data/examples/: 02c0640c-9ad2-46cc-a69d-a15179c57176.json  a0c6d1da-4381-4b4f-8a41-6dc9e7724856.json
examples/: trace_examples.rs
src/: alpha.rs  builder.rs  error.rs  geometry.rs  lib.rs  mesh.rs  polygonize.rs  preprocess.rs  triangulation.rs  types.rs
tests/: render_examples.rs
