[package]
name = "isohull"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rustc-hash = "2"
spade = "2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "examples"
harness = false
